# meson

./: run_tests.py  run_unittests.py  setup.py
mesonbuild/: build.py  interpreter.py  mesonlib.py
mesonbuild/backend/: backends.py  ninjabackend.py
mesonbuild/compilers/: c.py
mesonbuild/modules/: unstable_cargo.py
test cases/common/174 library executable same name/: lib.c  lib.h  main.c  meson.build
test cases/common/98 gen extra/: meson.build
test cases/linuxlike/13 static dynamic linkage/: meson.build
test cases/rust/7 cargo module/: meson.build
test cases/rust/7 cargo module/cbin/: main.c  meson.build
test cases/rust/7 cargo module/staticlib/: meson.build
test cases/rust/7 cargo module/staticlib/src/: lib.rs
tools/: meson_cargo_build_move.py
